--- a/index.html
+++ b/index.html
@@ -1,33 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
   <title>Frontend Mentor | Stats preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
-  Get insights that help your business grow.
+  <main class="card">
+    <div class="card-image">
+      <img srcset="/images/image-header-mobile.jpg 600w, /images/image-header-desktop.jpg 700w"
+        sizes="(max-width: 700px) 600w, 700w" src="/images/image-header-mobile.jpg"
+        alt="Women laughing while hard at work.">
+    </div>
+    <div class="card-content">
+      <h1 class="card-heading">Get <span>insights</span> that help your business grow.</h1>
+      <p class="card-para">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer
+        experience, and overall efficiency.
+      </p>
+      <div class="card-stats-container">
+        <div class="card-stats">
+          <h2 class="stat-num">10k+</h2>
+          <p class="stat-name">companies</p>
+        </div>
+        <div class="card-stats">
+          <h2 class="stat-num">314</h2>
+          <p class="stat-name">templates</p>
+        </div>
+        <div class="card-stats">
+          <h2 class="stat-num">12M+</h2>
+          <p class="stat-name">queries</p>
+        </div>
+      </div>
+    </div>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+  </main>
 
-  10k+ companies
-  314 templates
-  12m+ queries
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
+
+
 </body>
+
 </html>
+
+
+<!-- Get insights that help your business grow.
+
+Discover the benefits of data analytics and make better decisions regarding revenue, customer
+experience, and overall efficiency.
+
+10k+ companies
+314 templates
+12m+ queries -->
+
+<!-- <div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="#">Your Name Here</a>.
+</div> -->
