--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main class="card">
     <div class="card-image">
       <img srcset="/images/image-header-mobile.jpg 600w, /images/image-header-desktop.jpg 700w"
-        sizes="(max-width: 700px) 600w, 700w" src="/images/image-header-mobile.jpg"
+        sizes="(max-width: 700px) 600px, 700px" src="/images/image-header-mobile.jpg"
         alt="Women laughing while hard at work.">
     </div>
     <div class="card-content">
